--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "fortex-back",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend para la prueba técnica de Fortex",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "migrate": "prisma migrate dev --name init",
+    "generate": "prisma generate",
+    "seed": "node prisma/seed.js",
+    "build": "npx tsc",
+    "lint": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -21,6 +29,8 @@
     "prisma": "^6.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "eslint": "^8.54.0",
+    "prettier": "^3.2.4"
   }
 }
