--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "start": "npx prisma migrate deploy && node src/index.js",
     "migrate": "prisma migrate dev --name init",
     "generate": "prisma generate",
     "seed": "node prisma/seed.js",
-    "build": "npm run generate && npx prisma migrate deploy",
+    "build": "npm install && npx prisma generate && npx prisma migrate deploy",
     "postdeploy": "npx prisma migrate deploy && npx prisma generate",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
