--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "migrate": "prisma migrate dev --name init",
     "generate": "prisma generate",
     "seed": "node prisma/seed.js",
-    "build": "npm install && npx prisma generate && npx prisma migrate deploy",
-    "postdeploy": "npx prisma migrate deploy && npx prisma generate",
+    "build": "npm install && npx prisma generate && npx prisma migrate deploy && npm run seed",
+    "postdeploy": "npx prisma migrate deploy && npx prisma generate && npm run seed",
     "lint": "eslint . --fix",
     "format": "prettier --write ."
   },
